--- a/WindsOfMagic.csproj
+++ b/WindsOfMagic.csproj
@@ -49,6 +49,8 @@
      <Compile Include="Assets\Scripts\Gameplay\Pickups\ProjectilePickups.cs" />
      <Compile Include="Assets\Scripts\Gameplay\PlayerController.cs" />
      <Compile Include="Assets\Scripts\Gameplay\PlayerStatsTimeHandler.cs" />
+     <Compile Include="Assets\Scripts\Gameplay\Projectiles\PlayerProjectile.cs" />
+     <Compile Include="Assets\Scripts\Gameplay\Projectiles\PlayerProjectileTransformMovement.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Stats\PlayerStats.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Stats\PlayerStatsVar.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Stats\ProjectileStats.cs" />
