--- a/Assets/Scripts/WindsOfMagic.asmdef
+++ b/Assets/Scripts/WindsOfMagic.asmdef
@@ -2,7 +2,8 @@
     "name": "WindsOfMagic",
     "references": [
         "GUID:fe545d4ade85ac84a9e40d3a4c09aa62",
-        "GUID:10314cd94b731a74abd9221d57211e4d"
+        "GUID:10314cd94b731a74abd9221d57211e4d",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
