Pickup Loop Logic

--- a/WindsOfMagic.csproj
+++ b/WindsOfMagic.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\Scripts\Gameplay\TransformMovementTimeBoundAdapter.cs" />
      <Compile Include="Assets\Scripts\Gameplay\BulletWave.cs" />
      <Compile Include="Assets\Scripts\UIController.cs" />
+     <Compile Include="Assets\Scripts\Gameplay\EnemyWaves.cs" />
      <Compile Include="Assets\Scripts\Input\InputHandler.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Stats\PlayerStatsVar.cs" />
      <Compile Include="Assets\Scripts\Gameplay\BulletSpawnDefinition.cs" />
@@ -66,11 +67,16 @@
      <Compile Include="Assets\Scripts\Gameplay\ApplyDamageOnCollision.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Pickups\PlayerPickups.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Stats\ProjectileStatsVar.cs" />
+     <Compile Include="Assets\Scripts\WaveSpawner.cs" />
      <Compile Include="Assets\Scripts\Gameplay\GameTimeBoundTransform.cs" />
      <Compile Include="Assets\Scripts\DisableAndRespawn.cs" />
      <Compile Include="Assets\Scripts\TimedBoundRandom.cs" />
-     <Compile Include="Assets\Scripts\WaveSpawner.cs" />
-     <Compile Include="Assets\Scripts\Gameplay\EnemyWaves.cs" />
+     <Compile Include="Assets\Scripts\RoundPickup.cs" />
+     <Compile Include="Assets\Scripts\Wall.cs" />
+     <Compile Include="Assets\Scripts\WallScriptVar.cs" />
+     <Compile Include="Assets\Scripts\RegisterWallScriptVar.cs" />
+     <Compile Include="Assets\Scripts\WaveSpawnerVar.cs" />
+     <Compile Include="Assets\Scripts\RegisterSpawnWaveVar.cs" />
      <None Include="Assets\Scripts\WindsOfMagic.asmdef" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2020.1.8f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
