--- a/WindsOfMagic.csproj
+++ b/WindsOfMagic.csproj
@@ -50,23 +50,27 @@
      <Compile Include="Assets\Scripts\Gameplay\PlayerStatsTimeHandler.cs" />
      <Compile Include="Assets\Scripts\Gameplay\DestroyOnBirth.cs" />
      <Compile Include="Assets\Scripts\Gameplay\TransformMovementTimeBoundAdapter.cs" />
+     <Compile Include="Assets\Scripts\SettingNameFromColorType.cs" />
      <Compile Include="Assets\Scripts\Gameplay\BulletWave.cs" />
      <Compile Include="Assets\Scripts\UIController.cs" />
      <Compile Include="Assets\Scripts\RegisterWallScriptVar.cs" />
      <Compile Include="Assets\Scripts\Gameplay\EnemyWaves.cs" />
      <Compile Include="Assets\Scripts\Input\InputHandler.cs" />
      <Compile Include="Assets\Scripts\RegisterSpawnWaveVar.cs" />
+     <Compile Include="Assets\Scripts\FlexibleColorSetup.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Stats\PlayerStatsVar.cs" />
      <Compile Include="Assets\Scripts\Gameplay\BulletSpawnDefinition.cs" />
      <Compile Include="Assets\Scripts\Gameplay\TimeController.cs" />
      <Compile Include="Assets\Scripts\Gameplay\BulletWaveShooter.cs" />
      <Compile Include="Assets\Scripts\HSBColor.cs" />
      <Compile Include="Assets\Scripts\Gameplay\TimeBoundCurveTransformMove.cs" />
+     <Compile Include="Assets\Scripts\UI\ColorTypeVar.cs" />
      <Compile Include="Assets\Scripts\Wall.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Projectiles\PlayerProjectile.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Pickups\ProjectilePickups.cs" />
      <Compile Include="Assets\Scripts\Gameplay\IGameTimeListener.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Stats\PlayerStats.cs" />
+     <Compile Include="Assets\Scripts\PauseMenu.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Projectiles\PlayerProjectileTransformMovement.cs" />
      <Compile Include="Assets\Scripts\Gameplay\GameTime.cs" />
      <Compile Include="Assets\Scripts\Gameplay\TimedHealth.cs" />
@@ -82,8 +86,7 @@
      <Compile Include="Assets\Scripts\WaveSpawnerVar.cs" />
      <Compile Include="Assets\Scripts\WallScriptVar.cs" />
      <Compile Include="Assets\Scripts\TimedBoundRandom.cs" />
-     <Compile Include="Assets\Scripts\UI\ColorTypeVar.cs" />
-     <Compile Include="Assets\Scripts\FlexibleColorSetup.cs" />
+     <Compile Include="Assets\Scripts\GameSpeedUI.cs" />
      <None Include="Assets\Scripts\WindsOfMagic.asmdef" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2020.1.8f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
