--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,15 +59,18 @@
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\BlendModes\Shaders\Generated\SpritesDefault\BlendModes-SpritesDefault-Framebuffer.shader" />
+     <None Include="Assets\BlendModes\Shaders\Generated\TMProMobileDistanceField\BlendModes-TMProMobileDistanceField-Grab.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
      <None Include="Assets\BlendModes\Shaders\Generated\SpritesDefault\BlendModes-SpritesDefault-Grab.shader" />
      <None Include="Assets\Colorblind Effect\Documentation\ReadMe.txt" />
      <None Include="Assets\Colorblind Effect\Assets\Shaders\Colorblind.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
+     <None Include="Assets\BlendModes\Shaders\Generated\TMProMobileDistanceField\BlendModes-TMProMobileDistanceField-UnifiedGrab.shader" />
      <None Include="Assets\BlendModes\Shaders\BlendFunctions.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
      <None Include="Assets\BlendModes\Shaders\BlendModesCG.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
+     <None Include="Assets\BlendModes\Shaders\Generated\TMProMobileDistanceField\BlendModes-TMProMobileDistanceField-Framebuffer.shader" />
      <None Include="Assets\BlendModes\Shaders\Generated\SpritesDefault\BlendModes-SpritesDefault-OverlayMasked.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
      <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
@@ -80,13 +83,16 @@
      <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
      <None Include="Assets\BlendModes\Shaders\Generated\SpritesDefault\BlendModes-SpritesDefault-UnifiedGrabMasked.shader" />
      <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
+     <None Include="Assets\BlendModes\Shaders\Generated\TMProMobileDistanceField\BlendModes-TMProMobileDistanceField-GrabMasked.shader" />
      <None Include="Assets\FlexibleColorPicker\Materials\FCP_Gradient.shader" />
      <None Include="Assets\BlendModes\Shaders\Generated\SpritesDefault\BlendModes-SpritesDefault-UnifiedGrab.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
+     <None Include="Assets\BlendModes\Shaders\Generated\TMProMobileDistanceField\BlendModes-TMProMobileDistanceField-UnifiedGrabMasked.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
      <None Include="Assets\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
+     <None Include="Assets\BlendModes\Shaders\Generated\TMProMobileDistanceField\BlendModes-TMProMobileDistanceField-FramebufferMasked.shader" />
      <None Include="Assets\BlendModes\Shaders\Generated\SpritesDefault\BlendModes-SpritesDefault-FramebufferMasked.shader" />
      <None Include="Assets\BlendModes\Shaders\Generated\SpritesDefault\BlendModes-SpritesDefault-GrabMasked.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Sprite.shader" />
