--- a/WindsOfMagic.csproj
+++ b/WindsOfMagic.csproj
@@ -64,7 +64,9 @@
      <Compile Include="Assets\Scripts\Gameplay\Pickups\TimeVoyagePickup.cs" />
      <Compile Include="Assets\Scripts\Gameplay\TimedDisableOnCollision.cs" />
      <Compile Include="Assets\Scripts\Gameplay\CurveAnimeTimeBoundAdapter.cs" />
+     <Compile Include="Assets\Scripts\Gameplay\Pickups\HealthPickup.cs" />
      <Compile Include="Assets\Scripts\RoundPickup.cs" />
+     <Compile Include="Assets\Scripts\Gameplay\Pickups\DropsDefinitionVar.cs" />
      <Compile Include="Assets\Scripts\Gameplay\TimeBoundAdapter.cs" />
      <Compile Include="Assets\Scripts\Gameplay\PlayerStatsTimeHandler.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Pickups\PickupRepresentation.cs" />
@@ -86,6 +88,7 @@
      <Compile Include="Assets\Scripts\Input\InputScheme.cs" />
      <Compile Include="Assets\Scripts\Gameplay\BulletSpawnDefinition.cs" />
      <Compile Include="Assets\Scripts\Gameplay\TimeController.cs" />
+     <Compile Include="Assets\Scripts\Gameplay\Pickups\DropsDefinition.cs" />
      <Compile Include="Assets\Scripts\Gameplay\BulletWaveShooter.cs" />
      <Compile Include="Assets\Scripts\HSBColor.cs" />
      <Compile Include="Assets\Scripts\Gameplay\TimeBoundCurveTransformMove.cs" />
@@ -93,17 +96,20 @@
      <Compile Include="Assets\Scripts\Wall.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Projectiles\PlayerProjectile.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Pickups\ProjectilePickups.cs" />
+     <Compile Include="Assets\Scripts\Playtest\PlayTestOptions.cs" />
      <Compile Include="Assets\Scripts\Gameplay\IGameTimeListener.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Stats\PlayerStats.cs" />
      <Compile Include="Assets\Scripts\PauseMenu.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Projectiles\PlayerProjectileTransformMovement.cs" />
      <Compile Include="Assets\Scripts\Gameplay\GameTime.cs" />
      <Compile Include="Assets\Scripts\Gameplay\TimedHealth.cs" />
+     <Compile Include="Assets\Scripts\Gameplay\Pickups\RewindPickup.cs" />
      <Compile Include="Assets\Scripts\GameSpeedUI.cs" />
      <Compile Include="Assets\Scripts\UI\BlendColorApplier.cs" />
      <Compile Include="Assets\Scripts\Gameplay\PlayerController.cs" />
      <Compile Include="Assets\Scripts\Gameplay\ApplyDamageOnCollision.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Pickups\PlayerPickups.cs" />
+     <Compile Include="Assets\Scripts\Gameplay\Pickups\DropPickupsOnDisable.cs" />
      <Compile Include="Assets\Scripts\UI\KeyChangeSetting.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Stats\ProjectileStatsVar.cs" />
      <Compile Include="Assets\Scripts\WaveSpawner.cs" />
@@ -115,12 +121,8 @@
      <Compile Include="Assets\Scripts\WallScriptVar.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Pickups\PickupRepresentationArr.cs" />
      <Compile Include="Assets\Scripts\TimedBoundRandom.cs" />
-     <Compile Include="Assets\Scripts\Gameplay\Pickups\HealthPickup.cs" />
-     <Compile Include="Assets\Scripts\Gameplay\Pickups\RewindPickup.cs" />
-     <Compile Include="Assets\Scripts\Gameplay\Pickups\DropPickupsOnDisable.cs" />
-     <Compile Include="Assets\Scripts\Gameplay\Pickups\DropsDefinition.cs" />
-     <Compile Include="Assets\Scripts\Playtest\PlayTestOptions.cs" />
-     <Compile Include="Assets\Scripts\Gameplay\Pickups\DropsDefinitionVar.cs" />
+     <Compile Include="Assets\Scripts\UI\PickupText.cs" />
+     <Compile Include="Assets\Scripts\Gameplay\Pickups\InstantiatePickupTextOnCollision.cs" />
      <None Include="Assets\Scripts\WindsOfMagic.asmdef" />
  <Reference Include="Unity.TextMeshPro">
  <HintPath>D:/Ivo Capelo/Projects/WindsOfMagic/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
