--- a/WindsOfMagic.csproj
+++ b/WindsOfMagic.csproj
@@ -70,6 +70,8 @@
      <Compile Include="Assets\Scripts\Input\InputScheme.cs" />
      <Compile Include="Assets\Scripts\Gameplay\BulletSpawnDefinition.cs" />
      <Compile Include="Assets\Scripts\Gameplay\TimeController.cs" />
+     <Compile Include="Assets\Scripts\Gameplay\OnDisableDeath.cs" />
+     <Compile Include="Assets\Scripts\Gameplay\TimedBoundDestroyAfter.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Pickups\InstantiatePickupTextOnCollision.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Pickups\DropsDefinition.cs" />
      <Compile Include="Assets\Scripts\Gameplay\BulletWaveShooter.cs" />
@@ -84,6 +86,7 @@
      <Compile Include="Assets\Scripts\Gameplay\IGameTimeListener.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Stats\PlayerStats.cs" />
      <Compile Include="Assets\Scripts\PauseMenu.cs" />
+     <Compile Include="Assets\Scripts\Gameplay\SpawnOnDeath.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Projectiles\PlayerProjectileTransformMovement.cs" />
      <Compile Include="Assets\Scripts\Gameplay\GameTime.cs" />
      <Compile Include="Assets\Scripts\Gameplay\TimedHealth.cs" />
@@ -106,9 +109,7 @@
      <Compile Include="Assets\Scripts\WallScriptVar.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Pickups\PickupRepresentationArr.cs" />
      <Compile Include="Assets\Scripts\TimedBoundRandom.cs" />
-     <Compile Include="Assets\Scripts\Gameplay\OnDisableDeath.cs" />
-     <Compile Include="Assets\Scripts\Gameplay\SpawnOnDeath.cs" />
-     <Compile Include="Assets\Scripts\Gameplay\TimedBoundDestroyAfter.cs" />
+     <Compile Include="Assets\Scripts\Gameplay\Rusher.cs" />
      <None Include="Assets\Scripts\WindsOfMagic.asmdef" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2020.1.8f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
