Refactored Stat System

--- a/WindsOfMagic.csproj
+++ b/WindsOfMagic.csproj
@@ -83,7 +83,6 @@
      <Compile Include="Assets\Scripts\Gameplay\Pickups\TimeRewindPickup.cs" />
      <Compile Include="Assets\Scripts\Wall.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Projectiles\PlayerProjectile.cs" />
-     <Compile Include="Assets\Scripts\Gameplay\Pickups\ProjectilePickups.cs" />
      <Compile Include="Assets\Scripts\Playtest\PlayTestOptions.cs" />
      <Compile Include="Assets\Scripts\Gameplay\IGameTimeListener.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Stats\PlayerStats.cs" />
@@ -101,6 +100,7 @@
      <Compile Include="Assets\Scripts\Gameplay\Pickups\PlayerPickups.cs" />
      <Compile Include="Assets\Scripts\TimeBoundVar\ApplyToTimelineFloatVarOnCollision.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Pickups\DropPickupsOnDisable.cs" />
+     <Compile Include="Assets\Scripts\Gameplay\DifficultyCalculator.cs" />
      <Compile Include="Assets\Scripts\UI\KeyChangeSetting.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Stats\ProjectileStatsVar.cs" />
      <Compile Include="Assets\Scripts\UI\ColorSettings.cs" />
@@ -114,7 +114,9 @@
      <Compile Include="Assets\Scripts\TimeBoundVar\TimelineScriptVar.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Pickups\PickupRepresentationArr.cs" />
      <Compile Include="Assets\Scripts\TimedBoundRandom.cs" />
-     <Compile Include="Assets\Scripts\Gameplay\DifficultyCalculator.cs" />
+     <Compile Include="Assets\Scripts\Gameplay\Stats\PlayerStatsBalancer.cs" />
+     <Compile Include="Assets\Scripts\Gameplay\Stats\StatTierList.cs" />
+     <Compile Include="Assets\Scripts\Gameplay\Stats\PlayerStatType.cs" />
      <None Include="Assets\Scripts\WindsOfMagic.asmdef" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2020.1.8f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
