--- a/WindsOfMagic.csproj
+++ b/WindsOfMagic.csproj
@@ -118,6 +118,7 @@
      <Compile Include="Assets\Scripts\UI\StatUI.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Pickups\PickupRepresentationArr.cs" />
      <Compile Include="Assets\Scripts\TimedBoundRandom.cs" />
+     <Compile Include="Assets\Scripts\UI\VolumeSetting.cs" />
      <None Include="Assets\Scripts\WindsOfMagic.asmdef" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2020.1.8f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
