--- a/WindsOfMagic.csproj
+++ b/WindsOfMagic.csproj
@@ -59,6 +59,7 @@
      <Compile Include="Assets\Scripts\UI\PickupText.cs" />
      <Compile Include="Assets\Scripts\Gameplay\BulletWave.cs" />
      <Compile Include="Assets\Scripts\UI\InputSettingsController.cs" />
+     <Compile Include="Assets\Scripts\UI\GameOverController.cs" />
      <Compile Include="Assets\Scripts\UIController.cs" />
      <Compile Include="Assets\Scripts\RegisterWallScriptVar.cs" />
      <Compile Include="Assets\Scripts\TimedBoundRotateAnim.cs" />
@@ -121,7 +122,7 @@
      <Compile Include="Assets\Scripts\UI\StatUI.cs" />
      <Compile Include="Assets\Scripts\Gameplay\Pickups\PickupRepresentationArr.cs" />
      <Compile Include="Assets\Scripts\TimedBoundRandom.cs" />
-     <Compile Include="Assets\Scripts\UI\GameOverController.cs" />
+     <Compile Include="Assets\Scripts\UI\Tutorial.cs" />
      <None Include="Assets\Scripts\WindsOfMagic.asmdef" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2020.1.8f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
